syntax = "proto3";
package pb;
option go_package = "./pb";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UserResultStream {
    string result = 1;
    User User = 2;
}

message Users {
    repeated User users = 1;
}

service UserService {
    rpc AddUser (User) returns (User);
    rpc AddUserVerbose (User) returns (stream UserResultStream);
    rpc AddUsers (stream User) returns (Users);
    rpc AddUsersVerbose (stream User) returns (stream UserResultStream);
}